--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 
 #navigation .bg-image {
-    background: url(./img/blogging.jpg);
+    background: url(../img/blogging.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -62,10 +62,10 @@
 
 #navigation .sub-header {
     position: relative;
-    width: 1000px;
+    width: 100%;
     height: 70px;
     margin: 0 auto;
-    transition: 0.5s;
+    transition: 0.5s ease;
     border: red solid transparent;
     font-size: 20px;
 
@@ -84,16 +84,15 @@
 
 
 #navigation .sub-header.active .left-menu {
-    margin: 0 50px;
+    margin: 0 0px;
 }
 
 #navigation .sub-header .logo a {
     position: absolute;
-    ;
     font-size: 30px;
     left: 50%;
     transform: translateX(-50%);
-    transition: 0.2s;
+    transition: 1s ease;
     text-decoration: none;
     color: #fff;
     top: 15px;
@@ -103,6 +102,7 @@
     font-size: 25px;
     top: 8px;
     color: #fff;
+    display: none;
 }
 
 #navigation .sub-header .right-menu {
@@ -110,7 +110,7 @@
 }
 
 #navigation .sub-header.active .right-menu {
-    margin: 0 10px;
+    margin: 0 0px;
 }
 
 #navigation .sub-header ul li {
@@ -125,7 +125,7 @@
 }
 
 #navigation .sub-header.active ul li {
-    margin: 5px 25px;
+    margin: 5px 2px;
 }
 
 #navigation .sub-header ul li a {
@@ -287,6 +287,36 @@
 
 #blog .container .blog-content .blog-main {
     font-size: 20px;
+}
+
+#catg .container #data-catg-list {
+    margin-top: 20px
+}
+
+#catg .container h4 {
+    font-size: 24;
+    padding: 20px 0px;
+}
+
+#catg .container #data-catg-list ul li {
+    list-style: none;
+    font-size: 18px;
+
+}
+
+#author .container #data-author-list {
+    margin-top: 20px;
+}
+
+#author .container h4 {
+    font-size: 24;
+    padding: 20px 0px;
+}
+
+#author .container #data-author-list ul li {
+    list-style: none;
+    font-size: 18px;
+
 }
 
 /* contact */
